// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManyOfAnt should render a select control by default 1`] = `
<Select
  choiceTransitionName="zoom"
  disabled={false}
  id="id-many_of"
  label="Choose your snack"
  mode="default"
  onChange={[Function]}
  prefixCls="ant-select"
  readOnly={false}
  showSearch={false}
  transitionName="slide-up"
  value={Array []}
>
  <Option
    key="b"
    value="b"
  >
    Banana
  </Option>
  <Option
    key="a"
    value="a"
  >
    Apples
  </Option>
  <Option
    key="p"
    value="p"
  >
    Peaches
  </Option>
</Select>
`;

exports[`ManyOfCheckboxAnt should render a checkboxes by default 1`] = `
<CheckboxGroup
  disabled={false}
  id="id-many_of"
  label="Choose your snack"
  onChange={[Function]}
  options={Array []}
  prefixCls="ant-checkbox"
  readOnly={false}
  value={Array []}
>
  <Row
    gutter={0}
  >
    <Col
      key="b"
    >
      <Checkbox
        indeterminate={false}
        prefixCls="ant-checkbox"
        value="b"
      >
        Banana
      </Checkbox>
    </Col>
    <Col
      key="a"
    >
      <Checkbox
        indeterminate={false}
        prefixCls="ant-checkbox"
        value="a"
      >
        Apples
      </Checkbox>
    </Col>
    <Col
      key="p"
    >
      <Checkbox
        indeterminate={false}
        prefixCls="ant-checkbox"
        value="p"
      >
        Peaches
      </Checkbox>
    </Col>
  </Row>
</CheckboxGroup>
`;

exports[`ManyOfFormAnt should render a checkboxes by default 1`] = `
<FormItemAnt
  operation="bound ManyOfImpl"
>
  <ManyOfAnt
    disabled={false}
    id="id-many_of"
    operation="bound ManyOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;
